kubernetes/apps/istio-system/kubeflow-gateway/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kubeflow
spec:
  hostnames:
    - kubeflow.goyangi.io
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: istio-ingressgateway
          port: 80
